<resources>
    <string name="app_name">跨融商城</string>
    <string name="promotionCenter">推广中心</string>
    <string name="couponCenter">领券中心</string>
    <string name="BonusesAndServices">奖金&amp;服务</string>
    <string name="allOrder">全部订单</string>
    <string name="all">全部</string>
    <string name="allorder">全部订单</string>
    <string name="waitPay">待付款</string>
    <string name="waitSend">待发货</string>
    <string name="waitRecycle">待收货</string>
    <string name="salesReturn">退换货</string>
    <string name="finish">已完成</string>
    <string name="search">零食礼包   惊喜6件</string>
    <string name="search_shop">请输入商铺名称</string>
    <string name="enoughs">满减</string>
    <string name="salegit">满赠</string>
    <string name="sendfree">包邮</string>
    <string name="news">新品</string>
    <string name="tixian">提现</string>
    <string name="recharage">充值</string>
    <string name="balance">余额</string>
    <string name="integral">积分</string>
    <string name="nicke">昵称</string>
    <string name="unLogin">点击登录</string>
    <string name="mycoupon">我的优惠券</string>
    <string name="integralSignIn">积分签到</string>
    <string name="collect">我的收藏</string>
    <string name="storeenter">商家入驻</string>
    <string name="receiptaddress">收货地址</string>
    <string name="shoppingcar">购物车</string>
    <string name="manage">管理</string>
    <string name="checkAll">全选</string>
    <string name="getCoupon">领券</string>
    <string name="storename">套图设计工作室</string>
    <string name="include_postage">已包邮</string>
    <string name="default_address">默认地址</string>
    <string name="compile">编辑</string>
    <string name="delete">删除</string>
    <string name="dollar">¥</string>
    <string name="express">快递:</string>
    <string name="deliverGoods">发货:  </string>
    <string name="salesVolume">销量:  </string>
    <string name="discounts">优惠</string>
    <string name="getTicket">领券</string>
    <string name="activity">活动</string>
    <string name="selected">已选</string>
    <string name="selects">301# 高浓度，0.4kg一件</string>
    <string name="parameter">参数</string>
    <string name="parameters">品牌  质地...</string>
    <string name="goodsComment">宝贝评价</string>
    <string name="viewAll">查看全部</string>
    <string name="IntoTheShop">进店逛逛</string>
    <string name="GraphicDetails">图文详情</string>
    <string name="getMoney">可获得佣金</string>
    <string name="buyNow">立即购买</string>
    <string name="store">店铺</string>
    <string name="twocoupon">0张优惠券</string>
    <string name="mobile">手机号</string>
    <string name="discountCoupon">优惠券</string>
    <string name="discountCoupons">元优惠券</string>
    <string name="discountCoupone">折优惠券</string>
    <string name="neWget">立即领取</string>
    <string name="newchoice">立即选择</string>
    <string name="couponHint">以上价格计算仅为初步预估，不代表最终购买价格</string>
    <string name="finishs">完成</string>
    <string name="proprietaryGoods">部分自营商品使用</string>
    <string name="timeQuantum">2018.12.12-2019.12.12</string>
    <string name="detailedInformation">详细信息</string>
    <string name="shop_message">momo2019初秋新款 松紧腰休闲百搭阔腿裤阔腿裤阔腿裤初秋新款…</string>
    <string name="contactTheSeller">联系卖家</string>
    <string name="cancel_order">取消订单</string>
    <string name="view_logistics">查看物流</string>
    <string name="tatol">合计</string>
    <string name="shopallmonry">商品总额</string>
    <string name="freight">运费</string>
    <string name="shopnumber">件数</string>
    <string name="orderhint">50字以内(选填)</string>
    <string name="seckillcoupon">秒杀优惠</string>
    <string name="getverfity">获取验证码</string>
    <string name="noteverfity">短信验证码</string>
    <string name="name">姓名：</string>
    <string name="iphone">电话：</string>
    <string name="location">所在地址：</string>
    <string name="detailedLlocation">详细地址：</string>
    <string name="recepile_name">请填写收货人的姓名</string>
    <string name="recepile_phone">请填写收货人的电话</string>
    <string name="recepile_region">请点选收货人所在地区</string>
    <string name="recepile_detailed">请填写收货人所在详细地址</string>
    <string name="save">保存地址</string>
    <string name="liuyan">买家留言</string>
    <string name="nocoupon">该商品暂时没有优惠券！</string>
    <string name="referrer">推荐人：</string>
    <string name="defualtgrade">默认等级</string>
    <string name="withdrawDeposit">已提现奖励(元)</string>
    <string name="cashAward">可提现奖励(元)</string>
    <string name="platformReward">平台奖励</string>
    <string name="rewardOrders">奖励订单</string>
    <string name="rewardSubsidiary">奖励明细</string>
    <string name="myPromotion">我的推广</string>
    <string name="promotionCode">推广二维码</string>
    <string name="bonustixian">奖金提现</string>
    <string name="accumulated">累计奖励(元)</string>
    <string name="waitRemit">待打款奖励(元)</string>
    <string name="awardApplied">以申请奖励</string>
    <string name="invalidReward">无效奖励</string>
    <string name="successfulWithdrawal">成功提现奖励</string>
    <string name="receivingGoods">待收货奖励</string>
    <string name="outstandingReward">未结算奖励</string>
    <string name="userAgreementone">用户须知：</string>
    <string name="userAgreementthree">注意：可用奖励满100元后才能申请提现</string>
    <string name="myWithdraw">我要提现</string>
    <string name="balanceapply">提现申请已提交，等待人工审核</string>
    <string name="paysuccess">订单支付成功！</string>
    <string name="bianhao">订单编号：</string>
    <string name="paynumber">实付金额：</string>
    <string name="paymethod">支付方式：</string>
    <string name="shouhuoren">收货人:</string>
    <string name="shouhuoaddress">收货地址：</string>
    <string name="lookorder">查看订单</string>
    <string name="reorder">再来一单</string>
    <string name="mybalance">我的余额</string>
    <string name="balace">提现记录</string>
    <string name="balancetixian">余额提现</string>
    <string name="cashMoney">可提现金额(元)</string>
    <string name="cashnumber">提现金额</string>
    <string name="importMoney">请输入提现金额</string>
    <string name="allWithdraw">全部提现</string>
    <string name="selectMothod">选择提现方式</string>
    <string name="tixianWX">提现至微信</string>
    <string name="tixianZFB">提现支付宝</string>
    <string name="tixianYE">提现至余额</string>
    <string name="explain">详细说明：</string>
    <string name="tixianMessagethree">本次提现将扣除手续费 ¥0.00</string>
    <string name="tixianMessagefour">本次提现实际到账金额 ¥0.00</string>
    <string name="zfbname">支付宝账号:</string>
    <string name="pleaseimportname">请填写账号</string>
    <string name="confirmaccount">确认账号:</string>
    <string name="pleaseconfirmaccount">请确认账号</string>
    <string name="selectbank">选择银行</string>
    <string name="bankcardnumber">银行卡号</string>
    <string name="comfirmcardnumber">确认卡号</string>
    <string name="importbankcard">请填写银行卡号</string>
    <string name="pleasecomfirmcard">请确认银行卡号</string>
    <string name="rechargemoney">充值金额</string>
    <string name="importmoney">请输入充值金额</string>
    <string name="selectrecharg">选择支付方式</string>
    <string name="rechargeWX">微信支付</string>
    <string name="rechargeZFB">支付宝支付</string>
    <string name="rechargerecord">充值记录</string>
    <string name="cashierDesk">收银台</string>
    <string name="orderNumber">订单号：%1$s</string>
    <string name="ordermoney">订单金额(元)</string>
    <string name="wxpay">微信支付</string>
    <string name="wxsafepay">微信安全支付</string>
    <string name="zfbsafepay">支付宝安全支付</string>
    <string name="zfbpay">支付宝支付</string>
    <string name="yue">余额支付</string>
    <string name="nowmoney">当前余额:</string>
    <string name="wxforOther">微信找人代付</string>
    <string name="paylove">帮你付款的才是真爱</string>
    <string name="orderdetail">订单详情</string>
    <string name="waitpay">等待付款</string>
    <string name="ordermoneys">订单金额:</string>
    <string name="payorder">支付订单</string>
    <string name="paymentOnBehalf">代付</string>
    <string name="setinfo">完善个人信息</string>
    <string name="aboutapp">关于跨融商城APP</string>
    <string name="clear">清除缓存</string>
    <string name="message">新消息通知</string>
    <string name="message_state_not_opened">去打开</string>
    <string name="message_state_already_opened">已打开</string>
    <string name="exit_login">退出登录</string>
    <string name="login">登 录</string>
    <string name="add">+  新增地址</string>
    <string name="word">密码:</string>
    <string name="perfact">完善资料</string>
    <string name="importword">请输入密码</string>
    <string name="age">年龄:</string>
    <string name="myself">自我介绍:</string>
    <string name="ipone">手机号:</string>
    <string name="nobinding">未绑定手机号</string>
    <string name="changebinding">更换绑定</string>
    <string name="importname">请输入您的姓名</string>
    <string name="importmobile">请输入您的手机号</string>
    <string name="fiveverfity">5位验证码</string>
    <string name="habit">兴趣爱好</string>
    <string name="xing">*</string>
    <string name="submit">ba资料</string>
    <string name="submitMessage">保存资料</string>
    <string name="nowbind">立即绑定</string>
    <string name="storemobile">客服电话：400  777  1400</string>
    <string name="online_service_qq">3126614869</string>
    <string name="in_development">开发中，敬请期待！</string>
    <string name="merchant_entry">商家入驻</string>
    <string name="merchant_alliance">商家联盟</string>
    <string name="goods_evaluation">宝贝评价</string>
    <string name="goods_evaluat_all">全部</string>
    <string name="goods_evaluat_good">好评</string>
    <string name="goods_evaluat_middle">中评</string>
    <string name="goods_evaluat_bad">差评</string>
    <string name="goods_evaluat_slide_pic">晒图</string>
    <string name="empty_text_evaluation">暂无评论数据</string>
    <string name="empty_text_shope">暂无店铺信息</string>
    <string name="search_shop_list">商品列表</string>
    <string name="search_local_life_data">暂无美食信息</string>
    <string name="sempty_text_recharge_record">暂无充值信息</string>
    <string name="sempty_text_withdrawals_record">暂无提现信息</string>
    <string name="sempty_text_assets_record">暂无权记录信息</string>
    <string name="aboutshopapp">关于跨融商城APP</string>
    <string name="specialstatement">特别声明</string>
    <string name="givemegrade">给我评分</string>
    <string name="privacypolicy">隐私政策</string>
    <string name="licence">软件许可服务协议</string>
    <string name="nonet">当前网络较差请重新加载</string>
    <string name="rerequest">重新加载</string>
    <string name="shopnodata">亲， 您的购物车还没有宝贝哦~</string>
    <string name="noaddress">亲， 暂未添加收货地址哦~</string>
    <string name="goshop">去逛逛</string>
    <string name="version_unknown">版本号异常</string>
    <string name="shopName">店铺</string>
    <string name="morecoupon">赶紧去领券中心看看更多优惠券~</string>
    <string name="linkman">联系人</string>
    <string name="iphones">手机号</string>
    <string name="importyouname">请填写您的姓名</string>
    <string name="importyouipone">请填写您的手机号</string>
    <string name="hinttextone">请仔细填写联系方式，保证我们能尽快联系到您~</string>
    <string name="next">下一步</string>
    <string name="merchname">商户名称</string>
    <string name="mainproject">主营项目</string>
    <string name="shopintroduced">店铺介绍</string>
    <string name="projectexample">例如鞋帽`化妆品等</string>
    <string name="introduce">简单介绍下商户</string>
    <string name="newmerch">立即申请入驻</string>
    <string name="passnumber">账号</string>
    <string name="orderword">确认密码</string>
    <string name="importpass">请填写账号</string>
    <string name="recid">推荐人ID:</string>
    <string name="importrecid">请填写推荐人ID</string>
    <string name="hinttexttwo">用于登录商户后台，请认真填写</string>
    <string name="readagreement">我已阅读并了解 [入驻申请协议]</string>
    <string name="merchapplysuccess">您已申请成功</string>
    <string name="merchwithyou">平台审核后会有客服与您联系</string>
    <string name="tohome">先去商城逛逛</string>
    <string name="invite_friends">邀请好友</string>
    <string name="savePic">保存图片</string>
    <string name="shareWeiXin">分享到微信</string>
    <string name="invite_copy_desc">可以直接复制邀请码给好友下载APP注册填写海报\n中的二维码和邀请链接已经包含您的邀请信息</string>
    <string name="invite_code_msg_tip">邀请码空了哦</string>
    <string name="invite_code_msg_succ">复制成功</string>
    <string name="ordernumber">订单号:</string>
    <string name="merch_subtota">商品小计</string>
    <string name="real_payment">实付费（含运费）</string>
    <string name="order_number">订单编号:</string>
    <string name="order_create_time">创建时间:</string>
    <string name="order_pay_time">支付时间:</string>
    <string name="order_send_time">发货时间:</string>
</resources>