<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="merchfinallyVM"
            type="com.jzd.jzshop.ui.mine.merch.MerchFinallyViewModel" />



    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/titlebar"
            layout="@layout/layout_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:toolbarViewModel="@{merchfinallyVM.toolbarViewModel}" />

        <android.support.v4.widget.NestedScrollView
            android:layout_below="@id/titlebar"
            android:background="@color/red"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/px50dp"
            android:layout_below="@id/titlebar"
            >


            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/bg_shopenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView35"
                android:layout_width="@dimen/px260dp"
                android:layout_height="@dimen/px44dp"
                android:layout_marginTop="@dimen/px40dp"
                android:src="@mipmap/shopenterflow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView29" />


            <ImageView
                android:id="@+id/imageView36"
                android:layout_width="@dimen/px90dp"
                android:layout_height="@dimen/px24dp"
                android:layout_marginTop="14dp"
                android:src="@mipmap/unbasics"
                app:layout_constraintStart_toStartOf="@+id/imageView35"
                app:layout_constraintTop_toBottomOf="@+id/imageView35" />

            <ImageView
                android:id="@+id/imageView62"
                android:layout_width="@dimen/px90dp"
                android:layout_height="@dimen/px24dp"
                android:layout_marginStart="84dp"
                android:layout_marginTop="14dp"
                android:src="@mipmap/unbusiness"
                app:layout_constraintBottom_toBottomOf="@+id/imageView36"
                app:layout_constraintStart_toStartOf="@+id/imageView36"
                app:layout_constraintTop_toBottomOf="@+id/imageView35"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView48"
                android:layout_width="@dimen/px90dp"
                android:layout_height="@dimen/px24dp"
                android:layout_marginStart="@dimen/px80dp"
                android:layout_marginTop="14dp"
                android:src="@mipmap/merchinfo"
                app:layout_constraintEnd_toEndOf="@+id/imageView35"
                app:layout_constraintStart_toEndOf="@+id/imageView36"
                app:layout_constraintTop_toBottomOf="@+id/imageView35" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px20dp"
                android:layout_marginEnd="@dimen/px20dp"
                android:layout_marginTop="38dp"
                android:background="@drawable/boder_radius"
                app:layout_constraintTop_toBottomOf="@+id/imageView62"
                tools:layout_editor_absoluteX="16dp">

                <com.jzd.jzshop.utils.widget.MessageImportView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px46dp"
                    android:layout_marginStart="@dimen/px20dp"
                    android:layout_marginTop="@dimen/px20dp"
                    android:layout_marginEnd="@dimen/px20dp"
                    app:hinttext="@string/importpass"
                    app:layout_constraintTop_toTopOf="parent"
                    app:titletext="@string/passnumber"
                    tools:layout_editor_absoluteX="20dp" />

                <com.jzd.jzshop.utils.widget.MessageImportView
                    android:id="@+id/word"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px46dp"
                    android:layout_marginStart="@dimen/px20dp"
                    android:layout_marginTop="@dimen/px16dp"
                    android:layout_marginEnd="@dimen/px20dp"
                    app:hinttext="@string/importword"
                    app:importtype="textpassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    app:titletext="@string/word"
                    app:xingvisible="visible" />


                <com.jzd.jzshop.utils.widget.MessageImportView
                    android:id="@+id/reword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px46dp"
                    android:layout_marginStart="@dimen/px20dp"
                    android:layout_marginTop="@dimen/px16dp"
                    android:layout_marginEnd="@dimen/px20dp"
                    app:hinttext="@string/importword"
                    app:importtype="textpassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/word"
                    app:titletext="@string/orderword"
                    app:xingvisible="visible" />


                <com.jzd.jzshop.utils.widget.MessageImportView
                    android:id="@+id/recid"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px46dp"
                    android:layout_marginStart="@dimen/px20dp"
                    android:layout_marginTop="@dimen/px16dp"
                    android:layout_marginEnd="@dimen/px20dp"
                    app:importtype="number"
                    app:hinttext="@string/importrecid"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reword"
                    app:titletext="@string/recid"
                    app:xingvisible="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px18dp"
                    android:text="@string/hinttexttwo"
                    android:layout_marginBottom="@dimen/px20dp"
                    android:textSize="@dimen/px14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recid" />


            </android.support.constraint.ConstraintLayout>


            <Button
                android:id="@+id/button3"
                onClickCommand="@{merchfinallyVM.onClickListerenApply}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px20dp"
                android:layout_marginTop="@dimen/px30dp"
                android:layout_marginEnd="@dimen/px20dp"
                android:background="@drawable/btn_radius"
                android:text="@string/newmerch"
                android:textColor="@color/white"
                android:textSize="@dimen/px16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout11" />

            <CheckBox
                android:id="@+id/checkBox2"
                style="@style/CustomCheckboxTheme."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                onClickCommand="@{merchfinallyVM.onApplyContentClick}"
                android:textSize="@dimen/px15sp"
                android:checked="true"
                android:text="@string/readagreement"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3" />


        </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>

    </RelativeLayout>

</layout>
